# wallbounce

./: .gitignore  .gitmodules  CMakeLists.txt  build.zig  build.zig.zon  flake.nix  index.html  wallbounce.js  wallbounce.wasm
legacy/: .gitignore
legacy/src/: wallbounce.cc
src/: game_object.zig  game_state.zig  generator.cc  main.cc  main.zig  pch.hh  physics.cc  rand.cc  util.zig  wallbounce.cc  wallbounce.hh  wallbounce.zig
src/states/: main.cc  paused.cc  playing.cc  textinput.cc
